<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.gmu.swe.knarr</groupId>
    <artifactId>Knarr</artifactId>
    <version>0.0.3-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <galette.version>1.0.0-SNAPSHOT</galette.version>
        <galette.agentJar>${edu.neu.ccs.prl.galette:galette-agent:jar}</galette.agentJar>
        <galette.java>${project.build.directory}/galette/java</galette.java>
        <galette.cache>${project.build.directory}/galette/cache</galette.cache>
    </properties>

    <repositories>
        <repository>
            <id>ossrh-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>edu.neu.ccs.prl.galette</groupId>
            <artifactId>galette-agent</artifactId>
            <version>${galette.version}</version>
        </dependency>
        <dependency>
            <groupId>edu.gmu.swe.greensolver</groupId>
            <artifactId>green</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>integration-tests</id>
            <activation>
                <property>
                    <name>!skipITs</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>edu.neu.ccs.prl.galette</groupId>
                        <artifactId>galette-maven-plugin</artifactId>
                        <version>${galette.version}</version>
                        <executions>
                            <execution>
                                <id>instrument</id>
                                <goals>
                                    <goal>instrument</goal>
                                </goals>
                                <phase>process-test-resources</phase>
                                <configuration>
                                    <outputDirectory>${galette.java}</outputDirectory>
                                    <linkedCaches>
                                        <linkedCache>${galette.cache}</linkedCache>
                                    </linkedCaches>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>3.1.2</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <jvm>${galette.java}/bin/java</jvm>
                            <argLine>
                                -Xbootclasspath/a:${galette.agentJar}
                                -javaagent:${galette.agentJar}
                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                            </argLine>
                            <reuseForks>false</reuseForks>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
